crates/air_r_parser/tests/snapshots/error/namespace_expression_error.R
a::1
a::NA
a::NULL
a::TRUE
a::(b)
a::{ b }

a:::1
a:::NA
a:::NULL
a:::TRUE
a:::(b)
a:::{ b }

a()::b
a():::b

a::b::c
a:::b:::c
